extractor_texto_imagen.ipynb

--- a/extractor_texto_imagen.ipynb
+++ b/extractor_texto_imagen.ipynb
@@ -14,7 +14,7 @@
     "pytesseract.pytesseract.tesseract_cmd = r'C:/Program Files/Tesseract-OCR/tesseract.exe'\n",
     "\n",
     "# Ruta de la imagen\n",
-    "ruta_imagen = r'C:\\Users\\JuanHernandez\\OneDrive - Uniespecies, S.A\\Escritorio\\BakUp\\Extraccion/Scraping.png'\n",
+    "ruta_imagen = "dirección de imagen",
     "\n",
     "try:\n",
     "    # Abrir la imagen\n",
